--- a/Nearest Neighbor Algorithm.ipynb
+++ b/Nearest Neighbor Algorithm.ipynb
@@ -47,6 +47,32 @@
    },
    "outputs": [],
    "source": [
+    "# Look at our data.\n",
+    "plt.scatter(\n",
+    "    music[music['jazz'] == 1].duration,\n",
+    "    music[music['jazz'] == 1].loudness,\n",
+    "    color='red'\n",
+    ")\n",
+    "plt.scatter(\n",
+    "    music[music['jazz'] == 0].duration,\n",
+    "    music[music['jazz'] == 0].loudness,\n",
+    "    color='blue'\n",
+    ")\n",
+    "plt.legend(['Jazz', 'Rock'])\n",
+    "plt.title('Jazz and Rock Characteristics')\n",
+    "plt.xlabel('Duration')\n",
+    "plt.ylabel('Loudness')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def getNeighbors(trainingSet, testInstance, k):\n",
     "    distances = []\n",
     "    length = len(testInstance)-1\n",
@@ -67,7 +93,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "neighbors = KNeighborsClassifier(n_neighbors=1)\n",
+    "X = music[['loudness', 'duration']]\n",
+    "Y = music.jazz\n",
+    "neighbors.fit(X,Y)\n",
+    "\n",
+    "## Predict for a song with 24 loudness that's 190 seconds long.\n",
+    "neighbors.predict([[24, 190]])"
+   ]
   }
  ],
  "metadata": {
